--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -3,6 +3,7 @@
 {{- $logoWidth := .Site.Params.navbar.logo.width | default "20" -}}
 {{- $logoHeight := .Site.Params.navbar.logo.height | default "20" -}}
 {{- $logoDarkPath := .Site.Params.navbar.logo.dark | default $logoPath -}}
+{{- $displayThemeToggle := site.Params.theme.displayToggle | default true -}}
 
 {{- $navWidth := "hx-max-w-[90rem]" -}}
 {{- with .Site.Params.navbar.width -}}
@@ -40,7 +41,6 @@
           {{- end -}}
         {{- end -}}
 
-        {{/* Display icon menu item */}}
         {{- if .Params.icon -}}
           {{- $rel := cond (eq .Params.icon "mastodon") "noreferrer me" "noreferrer" }}
           <a class="hx-p-2 hx-text-current" {{ if $external }}target="_blank" rel="{{ $rel }}"{{ end }} href="{{ $link }}" title="{{ or (T .Identifier) .Name | safeHTML }}">
@@ -62,7 +62,12 @@
       {{- end -}}
     {{- end -}}
 
+    <!-- Theme Toggle Button -->
+    {{ if $displayThemeToggle }}
+      {{ partial "theme-toggle.html" }}
+    {{ end }}
 
+    <!-- Hamburger Menu Button (Mobile) -->
     <button type="button" aria-label="Menu" class="hamburger-menu -hx-mr-2 hx-rounded hx-p-2 active:hx-bg-gray-400/20 md:hx-hidden">
       {{- partial "utils/icon.html" (dict "name" "hamburger-menu" "attributes" "height=24") -}}
     </button>
